cluster/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  labels:
    name: portainer-ingress
spec:
  rules:
    - host: portainer.raspberrypi.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: portainer
                port:
                  number: 9000
